--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "start": "node build/server.js",
       "typeorm": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts"
    },
-   "author": "",
+   "author": "Rasheed Ayoade",
    "license": "ISC",
    "dependencies": {
       "@types/express": "^4.17.17",
@@ -21,19 +21,23 @@
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "http-status-codes": "^2.2.0",
+      "jsonwebtoken": "^9.0.1",
+      "moment": "^2.29.4",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^5.0.1",
       "ts-node": "^10.9.1",
       "ts-node-dev": "^2.0.0",
       "typedi": "^0.10.0",
-      "typeorm": "0.3.17",
+      "typeorm": "^0.3.17",
       "typeorm-typedi-extensions": "^0.4.1",
       "winston": "^3.10.0"
    },
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/body-parser": "^1.19.2",
       "@types/cors": "^2.8.13",
+      "@types/jsonwebtoken": "^9.0.2",
       "@types/node": "^16.11.10",
       "jest": "^29.6.4",
       "ts-node": "10.7.0",
